--- a/chopsticks_colab.ipynb
+++ b/chopsticks_colab.ipynb
@@ -6,7 +6,7 @@
       "name": "chopsticks_colab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOljehosUEvbDwPADrSC5Aq",
+      "authorship_tag": "ABX9TyOGHU2kjI+SDXq4AW0Me5XA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "import collections\n",
         "import math"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -167,11 +167,11 @@
         "        player_turn = -player_turn\n",
         "\n",
         "\n",
-        "def random_player(board_state, side):\n",
+        "def random_player(board_state, side, blank=\"\"):\n",
         "    moves = list(available_moves(board_state, side))\n",
         "    return random.choice(moves)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -313,7 +313,7 @@
         "\n",
         "    return state_results[move_states[move]] / state_samples[move_states[move]], move"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -323,14 +323,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 832
+          "height": 102
         },
-        "outputId": "e66a6275-fa6e-4c3a-c4db-f516958ab3a1"
+        "outputId": "86a631cd-c367-40d4-852b-e162def8f0a7"
       },
       "source": [
-        "play_game(monte_carlo_tree_search_uct, monte_carlo_tree_search_uct)"
+        "play_game(monte_carlo_tree_search_uct, random_player)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,49 +338,7 @@
             "Player 1 to move\n",
             "plays (2, 0)\n",
             "((1, 1), (1, 2))\n",
-            "Player -1 to move\n",
-            "plays (1, 0)\n",
-            "((2, 1), (1, 2))\n",
-            "Player 1 to move\n",
-            "plays (3, 0)\n",
-            "((2, 1), (2, 2))\n",
-            "Player -1 to move\n",
-            "plays (1, 0)\n",
-            "((4, 1), (2, 2))\n",
-            "Player 1 to move\n",
-            "plays (3, 0)\n",
-            "((4, 1), (3, 2))\n",
-            "Player -1 to move\n",
-            "plays (3, 0)\n",
-            "((1, 1), (3, 2))\n",
-            "Player 1 to move\n",
-            "plays (2, 0)\n",
-            "((1, 1), (3, 3))\n",
-            "Player -1 to move\n",
-            "plays (1, 0)\n",
-            "((4, 1), (3, 3))\n",
-            "Player 1 to move\n",
-            "plays (1, 0)\n",
-            "((4, 1), (2, 3))\n",
-            "Player -1 to move\n",
-            "plays (2, 0)\n",
-            "((4, 3), (2, 3))\n",
-            "Player 1 to move\n",
-            "plays (3, 0)\n",
-            "((4, 3), (0, 3))\n",
-            "Player -1 to move\n",
-            "plays (4, 0)\n",
-            "((4, 1), (0, 3))\n",
-            "Player 1 to move\n",
-            "plays (4, 0)\n",
-            "((4, 1), (0, 4))\n",
-            "Player -1 to move\n",
-            "plays (3, 0)\n",
-            "((3, 1), (0, 4))\n",
-            "Player 1 to move\n",
-            "plays (4, 0)\n",
-            "((3, 1), (0, 0))\n",
-            "we have a winner: side 1\n"
+            "illergal move, yer other player wins\n"
           ],
           "name": "stdout"
         },
@@ -394,7 +352,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
