changed player two to not be random

--- a/chopsticks_colab.ipynb
+++ b/chopsticks_colab.ipynb
@@ -6,7 +6,7 @@
       "name": "chopsticks_colab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGHU2kjI+SDXq4AW0Me5XA",
+      "authorship_tag": "ABX9TyP4oCImWXEYS/hg5/urwQzd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bgyarbro/chopsticks/blob/master/chopsticks_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bgyarbro/chopsticks-game/blob/master/chopsticks_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -171,7 +171,7 @@
         "    moves = list(available_moves(board_state, side))\n",
         "    return random.choice(moves)"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -313,7 +313,7 @@
         "\n",
         "    return state_results[move_states[move]] / state_samples[move_states[move]], move"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -323,22 +323,37 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 364
         },
-        "outputId": "86a631cd-c367-40d4-852b-e162def8f0a7"
+        "outputId": "1d50522e-fd01-4f6c-cf22-b72b4649ad7a"
       },
       "source": [
-        "play_game(monte_carlo_tree_search_uct, random_player)"
+        "play_game(monte_carlo_tree_search_uct, monte_carlo_tree_search_uct)"
       ],
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Player 1 to move\n",
-            "plays (2, 0)\n",
-            "((1, 1), (1, 2))\n",
-            "illergal move, yer other player wins\n"
+            "plays (1, 0)\n",
+            "((1, 1), (2, 1))\n",
+            "Player -1 to move\n",
+            "plays (4, 0)\n",
+            "((1, 2), (2, 1))\n",
+            "Player 1 to move\n",
+            "plays (3, 0)\n",
+            "((1, 2), (4, 1))\n",
+            "Player -1 to move\n",
+            "plays (1, 0)\n",
+            "((0, 2), (4, 1))\n",
+            "Player 1 to move\n",
+            "plays (4, 0)\n",
+            "((0, 2), (4, 3))\n",
+            "Player -1 to move\n",
+            "plays (4, 0)\n",
+            "((0, 0), (4, 3))\n",
+            "we have a winner: side -1\n"
           ],
           "name": "stdout"
         },
@@ -346,13 +361,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1"
+              "-1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 5
         }
       ]
     },
